--- a/roles/vmware_basic_provision/defaults/main.yml
+++ b/roles/vmware_basic_provision/defaults/main.yml
@@ -14,8 +14,10 @@ folder: "/vm/Discovered virtual machine"
 
 # vm guest parameters
 vm_names:
-memory_mb: 1024
-num_cpus: 1
+#memory_mb: 1024
+#num_cpus: 1
+memory_mb: "{{ memory_mb }}"
+num_cpus: "{{ num_cpus }}"
 notes: Provisioned via Ansible
 state: poweredon
 wait_for_ip_address: true
